--- a/literature.bib
+++ b/literature.bib
@@ -241,8 +241,7 @@ pages={81--96}}
 	booktitle = {Proceedings of the 15th {Conference} of the {European} {Chapter} of the {Association} for {Computational} {Linguistics}},
 	author = {Futrell, Richard and Levy, Roger},
 	year = {2017},
-	pages = {688--698},
-	file = {Noisy-context surprisal as a human sentence processing cost model - E17-1065:/home/user/Zotero/storage/MI7EK2ZN/E17-1065.pdf:application/pdf}
+	pages = {688--698}
 }
 
 @misc{noauthor-large-scale-nodate,
@@ -7809,8 +7808,6 @@ of full binary trees},
 
 @article{baayen-frequency-1993,
 	title = {On frequency, transparency and productivity},
-	issn = {0922-3495},
-	doi = {10.1007/978-94-017-3710-4\_7},
 	abstract = {Various corpus-based quantitative measures of morphological productivity are studied with respect to their empirical adequacy. A new productivity measure (P*) is proposed that evaluates the productivity of affixes in terms of their contribution to the growth rate of the overall vocabulary. This measure is shown to be the limiting form of a more general measure (A) that can be interpreted as estimating the resting activation levels of representations of affixes in the mental lexicon. This more general measure allows the effects of pseudo-affixation \& semantic transparency to be taken into account. Its application to large corpora of Dutch \& English written texts led to adequate productivity rankings. 5 Tables, 32 References. AA},
 	journal = {Yearbook of morphology 1992},
 	author = {Baayen, R. H.},
@@ -32983,8 +32980,6 @@ Debate grows over whether nation could eliminate a key but dirty fuel by 2040.},
 	title = {Large-scale evidence of dependency length minimization in 37 languages},
 	volume = {112},
 	issn = {0027-8424, 1091-6490},
-	url = {http://www.pnas.org/lookup/doi/10.1073/pnas.1502134112},
-	doi = {10.1073/pnas.1502134112},
 	language = {en},
 	number = {33},
 	urldate = {2016-01-26},
@@ -42286,8 +42281,6 @@ Video Abstract},
 	title = {Large-scale evidence of dependency length minimization in 37 languages},
 	volume = {112},
 	issn = {0027-8424, 1091-6490},
-	url = {http://www.pnas.org/lookup/doi/10.1073/pnas.1502134112},
-	doi = {10.1073/pnas.1502134112},
 	language = {en},
 	number = {33},
 	urldate = {2016-08-13},
@@ -48970,10 +48963,7 @@ CONCLUSION: The ability to utilize a speaker's gaze during word learning is not 
 
 @article{liu-dependency-2017,
 	title = {Dependency distance: {A} new perspective on syntactic patterns in natural languages},
-	issn = {15710645},
 	shorttitle = {Dependency distance},
-	url = {http://linkinghub.elsevier.com/retrieve/pii/S1571064517300532},
-	doi = {10.1016/j.plrev.2017.03.002},
 	language = {en},
 	urldate = {2017-05-10},
 	journal = {Physics of Life Reviews},
@@ -48986,8 +48976,6 @@ CONCLUSION: The ability to utilize a speaker's gaze during word learning is not 
 @article{hawkins-efficiency-2003,
 	title = {Efficiency and complexity in grammars: {Three} general principles},
 	shorttitle = {Efficiency and complexity in grammars},
-	url = {http://www.ling.helsinki.fi/uhlcs/LENCA/LENCA-2/information/John-Hawkins-CSLIpaper.pdf},
-	urldate = {2017-05-10},
 	journal = {The nature of explanation in linguistic theory},
 	author = {Hawkins, John A.},
 	year = {2003},
@@ -49151,12 +49139,9 @@ CONCLUSION: The ability to utilize a speaker's gaze during word learning is not 
 
 @inproceedings{futrell-noisy-context-2017-1,
 	title = {Noisy-context surprisal as a human sentence processing cost model},
-	url = {https://www.aclweb.org/anthology/E/E17/E17-1065.pdf},
-	urldate = {2017-04-25},
 	booktitle = {Proceedings of {EACL}},
 	author = {Futrell, Richard and Levy, Roger},
-	year = {2017},
-	file = {Noisy-context surprisal as a human sentence processing cost model - E17-1065.pdf:/home/user/Zotero/storage/ZI2NDCR3/E17-1065.pdf:application/pdf}
+	year = {2017}
 }
 
 @article{dautriche-wordform-2016,
@@ -49570,12 +49555,6 @@ CONCLUSION: The ability to utilize a speaker's gaze during word learning is not 
 	file = {arXiv.org Snapshot:/home/user/Zotero/storage/T662UMRZ/1703.html:text/html;Choi et al_2017_Transfer learning for music classification and regression tasks.pdf:/home/user/Zotero/storage/5R5UKDUQ/Choi et al_2017_Transfer learning for music classification and regression tasks.pdf:application/pdf}
 }
 
-@misc{noauthor-dependency-nodate,
-	title = {Dependency distance: {A} new perspective on syntactic patterns in natural languages},
-	url = {http://www.sciencedirect.com/science/article/pii/S1571064517300532},
-	urldate = {2017-04-04},
-	file = {Dependency distance\: A new perspective on syntactic patterns in natural languages:/home/user/Zotero/storage/9RHBAMVC/S1571064517300532.html:text/html}
-}
 
 @article{mair-script-1992,
 	title = {Script and {Word} in {Medieval} {Vernacular} {Sinitic}},
@@ -51151,7 +51130,7 @@ This method is illustrated by examples and can be widely employed by researchers
 	title = {Minimizing {Syntactic} {Dependency} {Lengths}: {Typological}/{Cognitive} {Universal}?},
 	volume = {4},
 	shorttitle = {Minimizing {Syntactic} {Dependency} {Lengths}},
-	journal = {Annu. Rev. Linguist},
+	journal = {Annual Review of Linguistics},
 	author = {Temperley, David and Gildea, Daniel},
 	year = {2018},
 	pages = {1--15},
@@ -51430,8 +51409,6 @@ This method is illustrated by examples and can be widely employed by researchers
 	title = {Large-scale evidence of dependency length minimization in 37 languages},
 	volume = {112},
 	issn = {0027-8424},
-	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4547262/},
-	doi = {10.1073/pnas.1502134112},
 	abstract = {We provide the first large-scale, quantitative, cross-linguistic evidence for a universal syntactic property of languages: that dependency lengths are shorter than chance. Our work supports long-standing ideas that speakers prefer word orders with short dependency lengths and that languages do not enforce word orders with long dependency lengths. Dependency length minimization is well motivated because it allows for more efficient parsing and generation of natural language. Over the last 20 y, the hypothesis of a pressure to minimize dependency length has been invoked to explain many of the most striking recurring properties of languages. Our broad-coverage findings support those explanations., Explaining the variation between human languages and the constraints on that variation is a core goal of linguistics. In the last 20 y, it has been claimed that many striking universals of cross-linguistic variation follow from a hypothetical principle that dependency length—the distance between syntactically related words in a sentence—is minimized. Various models of human sentence production and comprehension predict that long dependencies are difficult or inefficient to process; minimizing dependency length thus enables effective communication without incurring processing difficulty. However, despite widespread application of this idea in theoretical, empirical, and practical work, there is not yet large-scale evidence that dependency length is actually minimized in real utterances across many languages; previous work has focused either on a small number of languages or on limited kinds of data about each language. Here, using parsed corpora of 37 diverse languages, we show that overall dependency lengths for all languages are shorter than conservative random baselines. The results strongly suggest that dependency length minimization is a universal quantitative property of human languages and support explanations of linguistic variation in terms of general properties of human information processing.},
 	number = {33},
 	urldate = {2017-11-06},
@@ -53376,7 +53353,6 @@ Terra preta soils are of pre-Columbian nature and were created by humans between
 
 @book{hawkins-performance-1994,
 	title = {A performance theory of order and constituency},
-	volume = {73},
 	publisher = {Cambridge University Press},
 	author = {Hawkins, John A},
 	year = {1994}
@@ -54071,6 +54047,10 @@ Terra preta soils are of pre-Columbian nature and were created by humans between
 	url = {http://home.hum.uva.nl/fdg/working\_papers/WPFG14.pdf},
 	urldate = {2018-08-05},
 	author = {Rijkhoff, Jan},
+         journal = {Belgian Journal of Linguistics},
+         volume={1},
+          issue={1},
+        pages={95--125},
 	year = {1986},
 	file = {WPFG14.pdf:/home/user/Zotero/storage/AMSUC5Y8/WPFG14.pdf:application/pdf}
 }
@@ -55725,10 +55705,7 @@ Terra preta soils are of pre-Columbian nature and were created by humans between
   title =         {Large-scale evidence of dependency length
                    minimization in 37 languages},
   volume =        {112},
-  year =          {2015},
-  doi =           {10.1073/pnas.1502134112},
-  url =           {http://www.pnas.org/content/early/2015/07/28/
-                  1502134112.abstract},
+  year =          {2015}
 }
 
 @article{liu2017dependency,
@@ -56236,11 +56213,7 @@ bookTitle="Yearbook of Morphology 2002",
 year="2003",
 publisher="Springer Netherlands",
 address="Dordrecht",
-pages="245--281",
-abstract="In the previous sections I have presented a number of arguments in favor of the view that suffix ordering in Bantu is templatic in the default case. In almost all Bantu languages, causative and applicative suffixes must appear in a single fixed order. Where suffixes occur in two different orders, e.g. CAUS and REC, one sequence is licensed by the general CARP template, while the other is attributable to a specific MIRROR constraint referring to that sequence. The striking conclusion to drawn from this study is that there is no evidence that Bantu suffix ordering is driven by semantic compositionality or by a general Mirror Principle. Instead, these pressures are low-ranked in Bantu and, when present, have a limited effect on the overall system, as we have seen.27 That Bantu suffix ordering is largely templatic is also supported by phonological conditions which enter into the realization of suffix combinations.28 As I have also implied, the elaborated synchronic CARCP template in (28) is in part arbitrary, the product of history. This conclusion thus challenges the fundamental approach of those who have cited Bantu derivational suffixes in support of a non-arbitrary relation between morphology and syntax, or between morphology and semantics. Whether or not such relations occur elsewhere, Bantu suffixation provides strong evidence for the autonomy of morphology.",
-isbn="978-0-306-48223-6",
-doi="10.1007/0-306-48223-1_8",
-url="https://doi.org/10.1007/0-306-48223-1_8"
+pages="245--281"
 }
 
 
@@ -57368,14 +57341,7 @@ pages={491--505}}
 }
 
 
-@article{hyman2003suffix,
-	title="Suffix Ordering in Bantu: A Morphocentric Approach 1",
-	author="Larry M. {Hyman}",
-	journal="",
-	pages="245--281",
-	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1529243220",
-	year="2003"
-}
+
 
 @article{good2003strong,
 	title="Strong linearity: Three case studies towards a theory of morphosyntactic templatic constructions",
@@ -57385,14 +57351,18 @@ pages={491--505}}
 	year="2003"
 }
 
-@article{hyman2003suffix,
-	title="Suffix Ordering in Bantu: A Morphocentric Approach 1",
-	author="Larry M. {Hyman}",
-	journal="",
-	pages="245--281",
-	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1529243220",
-	year="2003"
+@Inbook{hyman2003suffix,
+author="Hyman, Larry M.",
+editor="Booij, Geert
+and van Marle, Jaap",
+title="Suffix ordering in Bantu: a morphocentric approach",
+bookTitle="Yearbook of Morphology 2002",
+year="2003",
+publisher="Springer Netherlands",
+address="Dordrecht",
+pages="245--281"
 }
+
 
 @article{plag2009suffix,
 	title="Suffix Ordering and Morphological Processing",
@@ -57507,7 +57477,7 @@ pages={491--505}}
 }
 
 @book{rice2000morpheme,
-	title="Morpheme Order and Semantic Scope: Woed Formation in the Athapaskan Verb",
+	title="Morpheme Order and Semantic Scope: Word Formation in the Athapaskan Verb",
 	author="Keren Rice",
 	publisher={Cambridge University Press},
 	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/963848586",
@@ -57681,15 +57651,12 @@ African Linguistics",
 	year="1971"
 }
 
-@preprint{Hahn2020modeling,
+@article{Hahn2020modeling,
   author    = {Michael Hahn and
                Judith Degen and Richard Futrell},
   title     = {Modeling word and morpheme order in natural language as an efficient tradeoff of memory and surprisal},
-  journal   = {In Preparation},
-  year      = {2020},
-  preprint       = {https://psyarxiv.com/nu4qz},
-  archivePrefix = {psyarxiv},
-  github = {https://github.com/m-hahn/memory-surprisal}
+  journal   = {Psychological Review},
+  year      = {2021}
 }
 
 @article{culbertson2020from,
@@ -58060,7 +58027,6 @@ African Linguistics",
 
 @article{hay2002speech,
  ISSN = {00978507, 15350665},
- URL = {http://www.jstor.org/stable/3086898},
  abstract = {This article presents corpus and experimental evidence in support of a parsability-based account of affix ordering in English: an affix that tends to be easily parsed out during speech perception should not occur inside an affix that does not. This generalization holds both at the affix level and the word level. At the affix level, this maxim, when combined with an understanding of the role of frequency and phonotactics in morphological processing, can account for the patterns generally attributed to level ordering. At the word level, it can explain the so-called dual-level behavior of some affixes-an affix may resist attaching to a complex word that is highly decomposable but be acceptable when it attaches to a comparable complex word that favors the direct access route in speech perception. Only a parsing account can afford this set of phenomena a unified explanation.},
  author = {Jennifer Hay},
  journal = {Language},
@@ -58231,13 +58197,21 @@ African Linguistics",
 }
 
 @article{plag2002the,
-	title="The role of selectional restrictions, phonotactics and parsing in constraining suffix ordering in English",
-	author="Ingo {Plag}",
-	journal="",
-	pages="285--314",
-	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2278818741",
-	year="2002"
+author="Plag, Ingo",
+editor="Booij, Geert
+and Van Marle, Jaap",
+title="The role of selectional restrictions, phonotactics and parsing in constraining suffix ordering in English",
+bookTitle="Yearbook of Morphology 2001",
+year="2002",
+publisher="Springer Netherlands",
+address="Dordrecht",
+pages="285--314",
+abstract="At least since Siegel (1974) there has been a debate about the principles and mechanisms that constrain the combinatorial properties of affixes, in particular of English suffixes. A classic example to illustrate the problem of combinatorial restrictions is given in (1):",
+isbn="978-94-017-3726-5",
+doi="10.1007/978-94-017-3726-5_11",
+url="https://doi.org/10.1007/978-94-017-3726-5_11"
 }
+
 
 @article{inkelas2016affix,
 	title="Affix ordering in Optimal Construction Morphology",
@@ -58325,8 +58299,7 @@ African Linguistics",
   author={Frank, Stefan L. and Hoeks, John C. J.},
   booktitle={Proceedings of the 41st Annual Conference of the Cognitive Science Society},
   pages={337--343},
-  year={2019},
-  organization={[Sl: sn]}
+  year={2019}
 }
 
 @article{aurnhammer2019evaluating,
@@ -58448,11 +58421,7 @@ pages={1707--1713}}
                {LREC} 2020, Marseille, France, May 11-16, 2020},
   pages     = {4034--4043},
   publisher = {European Language Resources Association},
-  year      = {2020},
-  url       = {https://www.aclweb.org/anthology/2020.lrec-1.497/},
-  timestamp = {Fri, 29 May 2020 18:13:34 +0200},
-  biburl    = {https://dblp.org/rec/conf/lrec/NivreMGHMPSTZ20.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+  year      = {2020}
 }
 
 @article{Shore1988OnTS,
