--- a/literature.bib
+++ b/literature.bib
@@ -25339,7 +25339,7 @@ As the world is about to find out whether or not our civilisation is up to the c
 
 @article{widdows-semantic-2008,
 	title = {Semantic vectors: a scalable open source package and online technology management application},
-	journal = {Proceedings of the Sixth International Language Resources and Evaluation (LREC???08)},
+	journal = {Proceedings of the Sixth International Language Resources and Evaluation ({LREC} 08)},
 	author = {Widdows, D and Ferraro, K},
 	year = {2008},
 	pages = {1183--1190}
@@ -48977,7 +48977,7 @@ CONCLUSION: The ability to utilize a speaker's gaze during word learning is not 
 	title = {Efficiency and complexity in grammars: {Three} general principles},
 	shorttitle = {Efficiency and complexity in grammars},
 	journal = {The nature of explanation in linguistic theory},
-	author = {Hawkins, John A.},
+	author = {Hawkins, John A},
 	year = {2003},
 	pages = {121--152},
 	file = {Microsoft Word - ch6.doc - download:/home/user/Zotero/storage/N927VNQ3/download.pdf:application/pdf}
@@ -49115,7 +49115,7 @@ CONCLUSION: The ability to utilize a speaker's gaze during word learning is not 
 	number = {2},
 	urldate = {2017-04-27},
 	journal = {New Ideas in Psychology},
-	author = {Hawkins, John A.},
+	author = {Hawkins, John A},
 	month = aug,
 	year = {2007},
 	pages = {87--107},
@@ -51403,22 +51403,6 @@ This method is illustrated by examples and can be widely employed by researchers
 	year = {2005},
 	pages = {643--686},
 	file = {Full Text PDF:/home/user/Zotero/storage/WRMW5D7M/Lasersohn - 2005 - Context Dependence, Disagreement, and Predicates o.pdf:application/pdf;Snapshot:/home/user/Zotero/storage/W8GBF6SN/s10988-005-0596-x.html:text/html;Snapshot:/home/user/Zotero/storage/U66IIFRI/s10988-005-0596-x.html:text/html}
-}
-
-@article{futrell-large-scale-2015-2,
-	title = {Large-scale evidence of dependency length minimization in 37 languages},
-	volume = {112},
-	issn = {0027-8424},
-	abstract = {We provide the first large-scale, quantitative, cross-linguistic evidence for a universal syntactic property of languages: that dependency lengths are shorter than chance. Our work supports long-standing ideas that speakers prefer word orders with short dependency lengths and that languages do not enforce word orders with long dependency lengths. Dependency length minimization is well motivated because it allows for more efficient parsing and generation of natural language. Over the last 20 y, the hypothesis of a pressure to minimize dependency length has been invoked to explain many of the most striking recurring properties of languages. Our broad-coverage findings support those explanations., Explaining the variation between human languages and the constraints on that variation is a core goal of linguistics. In the last 20 y, it has been claimed that many striking universals of cross-linguistic variation follow from a hypothetical principle that dependency length—the distance between syntactically related words in a sentence—is minimized. Various models of human sentence production and comprehension predict that long dependencies are difficult or inefficient to process; minimizing dependency length thus enables effective communication without incurring processing difficulty. However, despite widespread application of this idea in theoretical, empirical, and practical work, there is not yet large-scale evidence that dependency length is actually minimized in real utterances across many languages; previous work has focused either on a small number of languages or on limited kinds of data about each language. Here, using parsed corpora of 37 diverse languages, we show that overall dependency lengths for all languages are shorter than conservative random baselines. The results strongly suggest that dependency length minimization is a universal quantitative property of human languages and support explanations of linguistic variation in terms of general properties of human information processing.},
-	number = {33},
-	urldate = {2017-11-06},
-	journal = {Proceedings of the National Academy of Sciences of the United States of America},
-	author = {Futrell, Richard and Mahowald, Kyle and Gibson, Edward},
-	year = {2015},
-	pmid = {26240370},
-	pmcid = {PMC4547262},
-	pages = {10336--10341},
-	file = {Futrell et al_2015_Large-scale evidence of dependency length minimization in 37 languages.pdf:/home/user/Zotero/storage/PDA78C7J/Futrell et al_2015_Large-scale evidence of dependency length minimization in 37 languages.pdf:application/pdf}
 }
 
 @article{fassi-fehri-arabic-1999,
@@ -54017,7 +54001,7 @@ Terra preta soils are of pre-Columbian nature and were created by humans between
 	number = {2},
 	urldate = {2018-08-05},
 	journal = {Linguistic Inquiry},
-	author = {Hawkins, John A.},
+	author = {Hawkins, John A},
 	year = {1990},
 	pages = {223--261}
 }
@@ -54084,7 +54068,7 @@ Terra preta soils are of pre-Columbian nature and were created by humans between
 	number = {2},
 	urldate = {2018-08-05},
 	journal = {New Ideas in Psychology},
-	author = {Hawkins, John A.},
+	author = {Hawkins, John A},
 	month = aug,
 	year = {2007},
 	pages = {87--107},
@@ -55125,7 +55109,7 @@ Terra preta soils are of pre-Columbian nature and were created by humans between
 
 @book{hawkins1994performance,
   address =       {Cambridge},
-  author =        {Hawkins, John A.},
+  author =        {Hawkins, John A},
   publisher =     {Cambridge University Press},
   title =         {A performance theory of order and constituency},
   year =          {1994},
@@ -55262,7 +55246,7 @@ Terra preta soils are of pre-Columbian nature and were created by humans between
 
 @book{hawkins2004efficiency,
   address =       {Oxford},
-  author =        {Hawkins, John A.},
+  author =        {Hawkins, John A},
   publisher =     {Oxford University Press},
   title =         {Efficiency and complexity in grammars},
   year =          {2004},
@@ -55270,7 +55254,7 @@ Terra preta soils are of pre-Columbian nature and were created by humans between
 
 @book{hawkins2014crosslinguistic,
   address =       {Oxford},
-  author =        {Hawkins, John A.},
+  author =        {Hawkins, John A},
   publisher =     {Oxford University Press},
   title =         {Cross-linguistic variation and efficiency},
   year =          {2014},
@@ -57744,7 +57728,7 @@ African Linguistics",
 
 
 @book{schaaik2020turkish,
-	title="The Oxford Turkish Grammar",
+	title="The {O}xford {T}urkish Grammar",
 	author="Gerjan van Schaaik",
 	year="2020",
 	publisher="Oxford University Press"
@@ -57958,9 +57942,9 @@ African Linguistics",
 }
 
 @inproceedings{asahara2018universal,
-	title="Universal Dependencies Version 2 for Japanese.",
+	title="Universal Dependencies Version 2 for {J}apanese.",
 	author="Masayuki {Asahara} and Hiroshi {Kanayama} and Takaaki {Tanaka} and Yusuke {Miyao} and Sumire {Uematsu} and Shinsuke {Mori} and Yuji {Matsumoto} and Mai {Omura} and Yugo {Murawaki}",
-	booktitle="Proceedings of the Eleventh International Conference on Language Resources and Evaluation (LREC 2018)",
+	booktitle="Proceedings of the Eleventh International Conference on Language Resources and Evaluation ({LREC} 2018)",
 	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/2805882637",
 	year="2018"
 }
@@ -58314,7 +58298,7 @@ pages={107198}}
 author={Ethan G. Wilcox and Jon Gauthier and Jennifer Hu and Peng Qian and Roger P. Levy},
 title={On the predictive power of neural language models for human real-time comprehension behavior},
 year={2020},
-booktitle={Proceedings of CogSci 2020},
+booktitle={Proceedings of {C}og{S}ci 2020},
 pages={1707--1713}}
 
 @inproceedings{DBLP:conf/acl/FutrellDS20,
